<resources>
    <string name="app_name">PraAssessment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="segitiga">Segitiga</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="panjang">Panjang</string>
    <string name="hitung">Hitung</string>
    <string name="luas">Luas =</string>
    <string name="keliling">Keliling =</string>
    <string name="_0">0</string>
    <string name="share">Share</string>
    <string name="alas">Alas</string>
    <string name="tinggi">Tinggi</string>
    <string name="_6706184046">6706184046</string>
    <string name="muhyunusbayusalam">MuhYunusBayusalam</string>
    <string name="d3if_4204">D3If 4204</string>
</resources>
