<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        tools:context=".SegitigaFragment" android:id="@+id/layout2">

    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

        <!-- TODO: Update blank fragment layout -->
        <EditText
                android:id="@+id/alasSegitiga"
                android:hint="@string/alas"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
        <EditText
                android:id="@+id/tinggiSegitiga"
                android:hint="@string/tinggi"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/alasSegitiga"/>
        <Button
                android:id="@+id/btn_hitung"
                android:text="@string/hitung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tinggiSegitiga" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>

        <TextView
                android:id="@+id/LuasSegitiga"
                android:text="@string/luas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_hitung"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>

        <TextView
                android:id="@+id/KelilingSegitiga"
                android:text="@string/keliling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/LuasSegitiga"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"/>

        <TextView
                android:id="@+id/tv_LuasSegitiga"
                android:text="@string/_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_hitung"
                app:layout_constraintStart_toEndOf="@+id/LuasSegitiga"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"/>
        <TextView
                android:id="@+id/tv_kelilingSegitiga"
                android:text="@string/_0"
                android:layout_width="16dp"
                android:layout_height="29dp"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_LuasSegitiga"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toEndOf="@+id/KelilingSegitiga"
        />
        <Button
                android:id="@+id/btn_share"
                android:layout_marginTop="8dp"
                android:text="@string/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_kelilingSegitiga"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>